--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8091
+spring.datasource.url = jdbc:mysql://localhost:3306/gestion_stock?serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password =
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+
+
 
